# QtCLionTest1

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
